# libODS

./: .gitignore  README.md  TODO  meson.build
libods/: compression.c  definitions.h  libods.c  libods.h
libods/compression/: content.c  mimetype.c  parsers.h
test/: main.c
